dovecot/dovecot-pigeonhole/tests/compile/errors/keep.sieve
/*
 * Keep errors
 *
 * Total erors: 2 (+1 = 3)
 */

# Spurious string argument
keep "frop";

# Spurious test 
keep true;

# Not an error
keep;
